--- a/recipes/buns.html
+++ b/recipes/buns.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chinese Steamed Buns</h1>
-    <img src="../img/buns.jpg">
+    <img src="../img/buns.jpg" alt="Photo of steamed buns in a bowl" height="400" width="600">
     <p>These steamed buns are yummy Chinese dim sum that can be made 
         with or without meat filling. To make these tasty buns, you'll 
         need a wok equipped with a stainless steel steam plate. After 
